# aitest2

./: .gitignore  AGENTS.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONFIG_GUIDE.md  DEVELOPER_QUICK_REFERENCE.md  FEATURE_TOGGLES.md  FINAL_SOURCE_ANALYSIS_4000_USERS.md  FIX_REJECTION_REASON.md  IMPLEMENTATION_SUMMARY.md  KALMAN_OPTIMIZATION_GUIDE.md  PHYSIOLOGICAL_LIMITS_IMPLEMENTATION.md  README.md  REFACTORING_SUMMARY.md  REPORT_USAGE.md  SOURCE_TYPE_ANALYSIS_SUMMARY.md  analyze_all_users.py  analyze_all_users_robust.py  analyze_kalman_purpose.py  analyze_large_dataset.py  analyze_multiuser.py  analyze_rejections.py  analyze_reprocessing_needs.py  analyze_reprocessing_sample.py  analyze_source_impact.py  analyze_source_impact_fixed.py  analyze_source_profiles.py  analyze_user_volatility.py  batch_visualize.py  compare_user_counts.py  config.toml  config.toml.backup.20250915_132514  config_demo.toml  config_final_test.toml  config_improved.toml  config_less_strict.toml  config_profiles.toml  config_reasonable.toml  config_test.toml  config_test_enhanced.toml  (+93 more)
deprecated2/: AGENTS.md  CLAUDE.md  CONFIG_VALIDATION.md  DEVELOPMENT_GUIDELINES.md  IMPROVEMENTS_SUMMARY.md  KALMAN_INSIGHTS.md  LOGGING_VISUALIZATION.md  MATPLOTLIB_FIX.md  MIGRATION_COMPLETE.md  OUTPUT_STRUCTURE.md  README_old.md  README_simple.md  REALTIME_ARCHITECTURE.md  REWRITE_SUMMARY.md  TIME_OF_DAY.md  WORKFLOW.md  analyze_time_of_day.py  config.toml  debug_layer1_issues.py  debug_source_type.py  demo_robust_kalman.py  example_api_server.py  main.py  pyproject.toml  pyrightconfig.json  requirements_old.txt  test_architecture.py  test_config.toml  test_enhanced.py  test_enhanced_viz.py  test_extreme_change.py  test_fix_52kg.py  test_gap_investigation.py  test_gap_user.py  test_kalman_reset.py  (+13 more)
(+635 files in other folders)
