[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weight-stream-processor"
version = "1.0.0"
description = "High-performance streaming data processor for analyzing time-series weight readings"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.20.0",
    "toml>=0.10.2",
    "pykalman>=0.9.5",
]

[project.optional-dependencies]
visualization = [
    "matplotlib>=3.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.261",
]
all = [
    "weight-stream-processor[visualization,dev]",
]

[project.scripts]
weight-processor = "main:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src", "src.core", "src.filters", "src.visualization", "src.utils"]

[tool.setuptools.package-data]
"*" = ["*.toml", "*.md"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true